--- a/CarWash.MVC/appsettings.json
+++ b/CarWash.MVC/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DevelopmentConnection": "Data Source=./bin/Debug/net6.0/db/carWash.db"
+    "DevelopmentConnection": "Data Source=./db/carWash.db"
   }
 }
